# MBR-CUDA-Tile

./: .gitignore  CMakeLists.txt  README.md
bench/: README.md  a10g_cutile_bottleneck_report.py  audit_cuda_tile_first.sh  bf16_cutile_mma_gemm.cu  bf16_ffn12_cutile.cu  bf16_ffn12_residual_cutile.cu  bf16_ffn12_two_stage_cutile.cu  bf16_freq_attention_cutile.cu  bf16_gate_merge_cutile.cu  bf16_mask_final_glu_cutile.cu  bf16_mask_hidden_cutile.cu  bf16_qkv_bkn_cutile.cu  bf16_time_attention_cutile.cu  cuobjdump_kernel_summary.sh  cutile_tile_layout_probe.cu  nsys_dtype_timeline.sh  nsys_kernel_summary.sh
src/: audio_io.cpp  audio_io.h  chunk_cuda_tile.cu  chunk_cuda_tile.h  cuda_context.cu  cuda_context.h  inference_app.cpp  inference_app.h  main.cpp  mbr_cuda_tile.cu  mbr_cuda_tile.h  mbr_ffn12_cutile.cu  mbr_residual_cutile.cu  mbr_time_attention_cutile.cu  model_mel_band_roformer.cu  model_mel_band_roformer.h  ops.h  ops_attention.cu  ops_elementwise.cu  ops_fused.cu  ops_linear.cu  ops_misc.cu  ops_norm.cu  stft_cuda_tile.cu  stft_cuda_tile.h  tensor.cu  tensor.h  tensor_cuda_glue.cu  tensor_cuda_tile.cu  tensor_cuda_tile.h  weights.cu  weights.h
